# app_frontend

./: .gitignore
backend/: Cargo.toml  create_db.sh  delete_all_db.sh  test-db.txt
backend/src/: api.rs  app_state.rs  auth.rs  db.rs  main.rs  ping.rs
backend/src/api/: 2  send_email.rs
backend/src/auth/: captcha.rs  db.rs  google_claims.rs  hashing.rs  jwt.rs  sign_in.rs  sign_up_complete.rs  sign_up_sms.rs  sign_up_start.rs
backend/src/auth/db/: sign_in_attempts.rs  sign_up_session.rs  sms_code.rs  user_data.rs
frontend/web/: dashboard.html  index.html  phone-number.html  sign_up.html
frontend/web/css/: sign_in.css  sign_up.css  sms_verification.css
frontend/web/data/: data.csv
frontend/web/js/: auth.js  google_sign_up.js  jwt.js  phone-number.js  show_password.js  sign_in.js  sign_up.js  validation.js
